Fixed poster being aligned stretch

--- a/wp-content/themes/vsc-website/css/base/utility-classes.css
+++ b/wp-content/themes/vsc-website/css/base/utility-classes.css
@@ -29,6 +29,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: flex-start;
     flex-wrap: wrap;
     gap: 20px;
     padding: 20px 0px 80px 0px;
